<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/cloudu"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cloudu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/header_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/header_welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloudu" />

    <EditText
        android:id="@+id/holderlog_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/holderlog_email"
        android:background="@drawable/rounded"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        app:layout_constraintTop_toBottomOf="@id/header_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"/>

    <EditText
        android:id="@+id/holderlog_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/holderlog_password"
        android:background="@drawable/rounded"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        app:layout_constraintTop_toBottomOf="@id/holderlog_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot"
        android:textColor="@color/highlight2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/holderlog_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/button_login"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"
        android:backgroundTint="@null"
        android:onClick="Login"
        app:layout_constraintTop_toBottomOf="@id/forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register_link"
        android:textColor="@color/highlight2"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/alternative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alternative"
        android:textAlignment="center"
        android:textColor="@color/dark5"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/register_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/google"
        app:layout_constraintTop_toBottomOf="@id/alternative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>