<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot_password">

    <TextView
        android:id="@+id/header_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/header_forgot"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/holderfor_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/holderfor_email"
        android:background="@drawable/rounded"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        app:layout_constraintTop_toBottomOf="@id/header_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/button_recovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/button_recovery"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"
        android:backgroundTint="@null"
        android:onClick="Login"
        app:layout_constraintTop_toBottomOf="@id/holderfor_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/remember_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/remember_link"
        android:textColor="@color/highlight2"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/button_recovery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
